Ajout de css  + html, ajout de commentaires pour mieux s'y retrouver, ajustement des couleurs

--- a/public/index.html
+++ b/public/index.html
@@ -6,25 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <title>Fred Meziere</title>
 </head>
 
 <body>
+
+    <!--####### PARTIE HEADER ET NAV  #######-->
     <header>
         <div class="main__div">
             <div>
-                 <h1> <strong class="h1__f__strong">F</strong>red <strong class="h1__point__strong">.</strong></h1>
+                <a class="h1__color" href="#">
+                    <h1><strong class="h1__f__strong">F</strong>red<strong class="h1__point__strong">.</strong></h1>
+                </a>
             </div>
             <div class="div__cat__header">
-                <p class="p__nav__header">A propos</p>
-                <p class="p__nav__header">Portfolio</p>
-                <p class="p__nav__header">Contactez-moi</p>
-            </div>
-            <div>
-
+                <p class="p__nav__header__1"> <a class="white" href="#">Accueil</a></p>
+                <p class="p__nav__header__2"> <a class="white" href="#">A propos</a></p>
+                <p class="p__nav__header__3"> <a class="white" href="#">Mes réalisations</a></p>
+                <p class="p__nav__header__4"><a class="blue" href="#">Contactez-moi</a></p>
             </div>
         </div>
     </header>
+
+    <!--####### MAIN + DIV RESEAUX  #######-->
+    <main>
+
+        <div class="div__main__intro">
+            <h2>Développeur web</h2>
+        </div>
+        <div class="div__socialmedia">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+    </main>
+
+    <!--####### FOOTER  #######-->
+
+    <footer>
+        <p class="p__footer"> © Fred Meziere - 2023</p>
+    </footer>
+
+
 </body>
 
 </html>
