Ajout et rectification de tout les strongs non appropriés par des span

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <div class="main__div">
             <div>
                 <a class="h1__color" href="#">
-                    <h1><strong class="h1__f__strong">F</strong>red<strong class="h1__point__strong">.</strong></h1>
+                    <h1><span class="h1__f__strong">F</span>red<span class="h1__point__strong">.</span></h1>
                 </a>
             </div>
             <div class="div__cat__header">
@@ -37,8 +37,10 @@
     <main>
 
         <div class="div__main__intro">
-            <h2>Développeur web</h2>
+            <h2 class="h2__div__main">Développeur web <br>Orienté backend <span class="span__point__main__div__h2">...</span></h2>
+            
         </div>
+
         <div class="div__socialmedia">
             <img src="" alt="">
             <img src="" alt="">
