--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <main>
 
         <div class="div__main__intro">
-            <h2 class="h2__div__main">Développeur web <br>Orienté backend <span class="span__point__main__div__h2">...</span></h2>
+            <h2 class="h2__div__main">Développeur web <br> <span class="span__main__div__h2">Orienté back-end</span> <span class="span__point__main__div__h2">. . .</span> </h2>
             
         </div>
 
